first good test save of deeply nested workout session

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,8 @@ html(lang='en')
               li 
                 a(href='/') Home
               li 
+                a(href='/workout/workout-sessions') Workout Sessions
+              li 
                 a(href='/workout/exercises') Exercises
               li 
                 a(href='/workout/equipment') Equipment
@@ -26,6 +28,8 @@ html(lang='en')
                 a(href='/workout/movement-angles') Movement Angles
               li 
                 hr
+              li 
+                a(href='/workout/workout-session/create') Create Workout Sessions                
               li 
                 a(href='/workout/exercise/create') Create Exercise
               li 
