session model working as intended with array of objects

--- a/views/workout_session_form.pug
+++ b/views/workout_session_form.pug
@@ -20,20 +20,42 @@ block content
             option(value=exercise._id) #{exercise.name}
       label(for='equipment') Equipment:
       select#equipment.form-control(type='select' placeholder='Select Equipment' name='equipment' required='true')
-        for equipment in equipments
+        for equipment in equip
           if equipment
             option(value=equipment._id selected=(equipment.name.toString()==equipment._id.toString() ? 'selected' : false)) #{equipment.name}
           else
             option(value=equipment._id) #{equipment.name}
-      //- label(for="sets") Sets:
-      //- input#weight.form-control(type='text', placeholder='Add sets' name='sets' value=(undefined===workoutSession ? '' : workoutSession.sets))
       label(for="reps") Reps:
-      input#weight.form-control(type='text', placeholder='Add reps' name='reps' value=(undefined===workoutSession ? '' : workoutSession.reps))
+      input#reps.form-control(type='number', placeholder='Add reps' name='reps')
       label(for="weight") Weight:
-      input#weight.form-control(type='text', placeholder='Add weight' name='weight' value=(undefined===workoutSession ? '' : workoutSession.weight))
-    div.form-group
-      label(for="sessionComments") Comments:
-      input#comments.form-control(type='text', placeholder='Add comments' name='sessionComments' value=(undefined===workoutSession ? '' : workoutSession.sessionComments))
+      input#weight.form-control(type='number', placeholder='Add weight' name='weight')
+      label(for="circuitTime") Time:
+      input#circuitTime.form-control(type='number', placeholder='Add comments' name='circuitTime')
+      label(for="circuitComments") Comments:
+      input#circuitComments.form-control(type='text', placeholder='Add comments' name='circuitComments')
+    div.form-group  
+      label(for='exercise') Exercise:
+      select#exercise.form-control(type='select' placeholder='Select exercise' name='exercise2' required='true')
+        for exercise in exercises
+          option(value=exercise.name) #{exercise.name}
+      label(for='equipment') Equipment:
+      select#equipment.form-control(type='select' placeholder='Select Equipment' name='equipment2' required='true')
+        for equipment in equip
+          if equipment
+            option(value=equipment._id selected=(equipment.name.toString()==equipment._id.toString() ? 'selected' : false)) #{equipment.name}
+          else
+            option(value=equipment._id) #{equipment.name}
+      label(for="reps") Reps:
+      input#weight.form-control(type='number', placeholder='Add reps' name='reps2')
+      label(for="weight") Weight:
+      input#weight.form-control(type='number', placeholder='Add weight' name='weight2')
+      label(for="circuitTime") Circuit time:
+      input#circuitTime.form-control(type='number', placeholder='Add time' name='circuitTime2')
+      label(for="circuitComments") Circuit Comments:
+      input#circuitComments.form-control(type='text', placeholder='Add comments' name='circuitComments2')    
+    div.form-group  
+      label(for="sessionComments") Session Comments:
+      input#sessionComments.form-control(type='text', placeholder='Add comments' name='sessionComments') 
     button.btn.btn-primary(type='submit') Submit
 
   if errors 
